fix spacing

--- a/themes/wwktm/static/css/style.css
+++ b/themes/wwktm/static/css/style.css
@@ -713,6 +713,7 @@ section.content.highlights-block {
 .highlights-block img{
   border-radius:10px;
   opacity:0.6;
+  margin-top:1.5rem;
 }
 .highlights-block img:hover{
   opacity:1;
